--- a/files/app/etc/local.xml.twig
+++ b/files/app/etc/local.xml.twig
@@ -34,7 +34,7 @@
                 <server>{{ redis_object_host }}</server>                 <!-- or absolute path to unix socket -->
                 <port>{{ redis_object_port }}</port>
                 <persistent></persistent>               <!-- Specify a unique string like "cache-db0" to enable persistent connections. -->
-                <database>0</database>
+                <database>{{ redis_object_database|default('0') }}</database>
                 <password></password>
                 <force_standalone>0</force_standalone>  <!-- 0 for phpredis, 1 for standalone PHP -->
                 <connect_retries>5</connect_retries>    <!-- Reduces errors due to random connection failures -->
@@ -55,7 +55,7 @@
             <timeout>2.5
             </timeout>                               <!-- This is the Redis connection timeout, not the locking timeout -->
             <persistent></persistent>                            <!-- Specify unique string to enable persistent connections. E.g.: sess-db0; bugs with phpredis and php-fpm are known: https://github.com/nicolasff/phpredis/issues/70 -->
-            <db>0
+            <db>{{ redis_session_database|default('0') }}
             </db>                                           <!-- Redis database number; protection from accidental loss is improved by using a unique DB number for sessions -->
             <compression_threshold>2048
             </compression_threshold>  <!-- Set to 0 to disable compression (recommended when suhosin.session.encrypt=on); known bug with strings over 64k: https://github.com/colinmollenhour/Cm_Cache_Backend_Redis/issues/18 -->
@@ -83,7 +83,7 @@
                 <server>{{ redis_fpc_host }}</server> <!-- or absolute path to unix socket -->
                 <port>{{ redis_fpc_port }}</port>
                 <persistent></persistent> <!-- Specify a unique string like "cache-db0" to enable persistent connections. -->
-                <database>0</database> <!-- Separate database 1 to keep FPC separately -->
+                <database>{{ redis_fpc_database|default('0') }}</database> <!-- Separate database 1 to keep FPC separately -->
                 <password></password>
                 <force_standalone>0</force_standalone>  <!-- 0 for phpredis, 1 for standalone PHP -->
                 <connect_retries>1</connect_retries>    <!-- Reduces errors due to random connection failures -->
