Disabled autoescape on all twig templates

--- a/files/errors/local.xml.twig
+++ b/files/errors/local.xml.twig
@@ -1,3 +1,4 @@
+{% autoescape false %}
 <?xml version="1.0"?>
 <config>
     <skin>{{ app_code }}</skin>
@@ -23,3 +24,4 @@
         <trash>leave</trash>
     </report>
 </config>
+{% endautoescape %}
