--- a/files/app/etc/local.xml.twig
+++ b/files/app/etc/local.xml.twig
@@ -1,3 +1,4 @@
+{% autoescape false %}
 <?xml version="1.0"?>
 <config>
     <global>
@@ -132,3 +133,4 @@
 {% endif %}
     </default>
 </config>
+{% endautoescape %}
